--- a/src/styles/user/profile.css
+++ b/src/styles/user/profile.css
@@ -1,17 +1,20 @@
+.profileController {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
 .profileDiv {
   color: #30c7ff;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: auto;
-  margin-top: 100px;
+  margin-top: 50px;
+  margin-bottom: -20px;
 }
 .profileDetail {
   background-color: #005676;
-  width: 40%;
+  width: 200%;
   text-align: center;
-  padding: 100px;
-  border-radius: 50px;
+  padding: 50px;
+  border-radius: 30px;
+  margin-left: -4rem;
 }
 .userDetail {
   text-align: justify;
@@ -21,6 +24,7 @@
   padding: 20px;
   border-radius: 30px;
   margin-top: 4rem;
+  font-size: 14px;
 }
 .editProfileButton {
   margin-top: 8vh;
@@ -42,17 +46,34 @@
   color: #30c7ff;
 }
 .paymentStatus {
-  color: #30c7ff;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  height: auto;
-  margin-top: 100px;
+  flex-direction: column;
 }
 .paymentDetail {
   background-color: #005676;
-  width: 60%;
+  color: #30c7ff;
+  margin-top: 50px;
   text-align: center;
-  padding: 100px;
-  border-radius: 50px;
+  width: 100%;
+  padding: 50px;
+  border-radius: 30px;
+}
+.tableHistoryController {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.historyList {
+  color: black;
+  text-align: center;
+  align-items: center;
+  border-style: solid;
+  border-color: black;
+  border-width: thick;
+  border-radius: 20px;
+  background-color: #30c7ff;
+  width: 100%;
+}
+.historyList td {
+  padding: 25px;
 }
