--- a/src/styles/user/wishlist.css
+++ b/src/styles/user/wishlist.css
@@ -2,8 +2,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 50vh;
-  margin-top: 100px;
 }
 .wishlist-content {
   background-color: #005676;
@@ -11,28 +9,70 @@
   text-align: center;
   padding: 100px;
   border-radius: 50px;
+  margin-top: 50px;
+  margin-bottom: -50px;
 }
 .wishlist-content h1 {
   color: #30c7ff;
   font-weight: bold;
+  margin-bottom: 3rem;
 }
 .wishlist-content p {
   color: #30c7ff;
   font-size: 20px;
 }
-.wishlist-content button {
+.searchWishlist {
   border-style: solid;
   border-width: 4px;
   border-radius: 30px;
   padding: 10px;
   color: #005676;
-  background-color: lightblue;
+  font-weight: bolder;
+  background-color: #30c7ff;
   font-size: 14px;
   border-color: #30c7ff;
   cursor: pointer;
 }
-.wishlist-content button:hover {
-  border-color: #30c7ff;
+.searchWishlist:hover {
+  border-color: black;
   color: #30c7ff;
   background-color: black;
+}
+.deleteWishlistButton {
+  border-style: solid;
+  border-width: 4px;
+  border-radius: 10px;
+  padding: 10px;
+  color: #30c7ff;
+  background-color: #005676;
+  font-size: 14px;
+  font-weight: bolder;
+  border-color: #005676;
+  cursor: pointer;
+}
+.deleteWishlistButton:hover {
+  background-color: black;
+  border-color: black;
+  color: red;
+}
+.product-wishlist {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.wishlistTable {
+  text-align: center;
+  align-items: center;
+  border-style: solid;
+  border-color: black;
+  border-width: thick;
+  border-radius: 20px;
+  background-color: #30c7ff;
+}
+.wishlistTable td {
+  padding: 40px;
+}
+.trTitle {
+  font-size: 22px;
+  font-weight: bold;
 }
