--- a/src/styles/user/profile.css
+++ b/src/styles/user/profile.css
@@ -77,3 +77,48 @@
 .historyList td {
   padding: 25px;
 }
+.addressDiv {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.addressController {
+  background-color: #005676;
+  color: #30c7ff;
+  padding: 50px;
+  margin-top: 50px;
+  margin-bottom: -20px;
+  width: 50%;
+  border-radius: 30px;
+}
+.addAddress {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding: 20px;
+  background-color: black;
+  border-radius: 30px;
+}
+.addAddress input {
+  text-align: center;
+  padding: 6px;
+  width: 30%;
+  border-radius: 6px;
+}
+.showAddress {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background-color: black;
+  margin-top: 20px;
+  border-radius: 30px;
+}
+.showAddress table {
+  text-align: center;
+}
+.showAddress td {
+  padding: 30px;
+}
